[gd_scene load_steps=2 format=2]

[ext_resource path="res://Engine/Abilities/Ability.gd" type="Script" id=1]

[node name="Ability" type="Node"]
script = ExtResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="CastTime" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="CastTime" to="." method="_on_CastTime_timeout"]
